// Color utilities for layout elements.
syntax = "proto3";

package androidx.wear.protolayout.proto;

import "dynamic.proto";

option java_package = "androidx.wear.protolayout.proto";
option java_outer_classname = "ColorProto";

// A property defining a color.
message ColorProp {
  // The color value, in ARGB format.
  optional uint32 argb = 1;

  // The dynamic value.
  androidx.wear.protolayout.expression.proto.DynamicColor dynamic_value = 2;
}
